test/1.2/errors/T_ECONT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method other() {
    /// ERROR ECONT
    continue;
}

method init {
    /// ERROR ECONT
    continue;
    foreach i in ([1, 2]) {
        inline $other();
    }
}
